--- a/PayKids/gradle/libs.versions.toml
+++ b/PayKids/gradle/libs.versions.toml
@@ -10,19 +10,27 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
-jetbrainsKotlinJvm = "1.9.0"
 datastorePreferences = "1.1.1"
+
 logger = "2.2.0"
-loggingInterceptor = "4.12.0"
-lifecycleViewmodelKtx = "2.8.7"
+
+okhttp = "4.12.0"
 retrofit2 = "2.11.0"
+jetbrainsKotlinJvm = "1.9.0"
+
+lifecycleViewmodelKtx = "2.8.7"
 roomKtx = "2.6.1"
+
 hilt = "2.52"
 ksp = "1.9.24-1.0.20"
 
+kotlinxCoroutinesCore = "1.8.1"
+
+javaxInject = "1"
+datastore = "1.1.1"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleViewmodelKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
@@ -35,13 +43,22 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+
 retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit2" }
-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "loggingInterceptor" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit2" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+
 logger = { module = "com.orhanobut:logger", version.ref = "logger" }
-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
+
+javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInject" }
+
+datastore = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
