--- a/PayKids/gradle/libs.versions.toml
+++ b/PayKids/gradle/libs.versions.toml
@@ -31,6 +31,8 @@ javaxInject = "1"
 datastore = "1.1.1"
 navigationFragment = "2.8.4"
 
+v2All = "2.20.1"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
@@ -54,9 +56,8 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit2" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit2" }
-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
-
 logger = { module = "com.orhanobut:logger", version.ref = "logger" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
@@ -67,6 +68,8 @@ javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInjec
 
 datastore = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
+
+v2-all = { module = "com.kakao.sdk:v2-all", version.ref = "v2All" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
