--- a/PayKids/app/src/main/AndroidManifest.xml
+++ b/PayKids/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Start">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,14 +31,21 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <!-- Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" -->
-                <data android:host="oauth"
+                <data
+                    android:host="oauth"
                     android:scheme="kakao${KAKAO_NATIVE_KEY}" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.paykids.presentation.view.signIn.SignActivity"/>
+
+        <activity android:name="com.paykids.presentation.view.home.HomeActivity" />
+
     </application>
 
 </manifest>
