--- a/PayKids/gradle/libs.versions.toml
+++ b/PayKids/gradle/libs.versions.toml
@@ -34,6 +34,8 @@ navigationFragment = "2.8.4"
 
 v2All = "2.20.1"
 
+balloon = "1.4.6"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
@@ -72,6 +74,8 @@ datastore = { module = "androidx.datastore:datastore-preferences", version.ref =
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 
 v2-all = { module = "com.kakao.sdk:v2-all", version.ref = "v2All" }
+
+balloon = { module = "com.github.skydoves:balloon", version.ref = "balloon" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
